--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
+<!-- header.html -->
+
 <header class="site-header">
   <div class="wrapper">
     <a class="site-title" href="{{ "" | prepend: site.baseurl | prepend: site.url }}/">
