--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
+      <div class="wrapper post-wrapper">
         <div class="post">
 
           <header class="post-header">
