--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -195,6 +195,16 @@ pre {
   position: relative;
 }
 
+.wrapper.post-wrapper {
+  max-width: -webkit-calc(1100px - (#{$spacing-unit} * 2));
+  max-width:         calc(1100px - (#{$spacing-unit} * 2));
+
+  @include media-query($on-laptop) {
+    max-width: -webkit-calc(1100px - (#{$spacing-unit}));
+    max-width:         calc(1100px - (#{$spacing-unit}));
+  }
+}
+
 /**
  * Clearfix
  */
