--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -49,20 +49,28 @@
           <h1 class="page-heading">{{ page.title }}</h1>
           {{ content }}
 
-          <p class="blog-post-list">
+          <div class="blog-post-list">
             {% for post in site.posts %}
 
               {% if post.draft != true %}
-                <span class="blog-post-date">{{ post.date | date: "%-m/%-d/%y" }}</span>
-                <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="blog-post-title">
-                  {{ post.title }}
-                </a>
-                <br />
+                <div class="blog-post-item">
+                  <div class="blog-post-meta">
+                    <span class="blog-post-date">{{ post.date | date: "%-m/%-d/%y" }}</span>
+                    {% if post.tags %}
+                      {% for tag in post.tags %}
+                        <span class="blog-tag blog-tag-{{ tag | slugify }}">{{ tag }}</span>
+                      {% endfor %}
+                    {% endif %}
+                  </div>
+                  <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="blog-post-title">
+                    {{ post.title }}
+                  </a>
+                </div>
 
               {% endif %}
 
             {% endfor %}
-          </p>
+          </div>
         </div>
       </div>
     </div>
