--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -54,17 +54,19 @@
 
               {% if post.draft != true %}
                 <div class="blog-post-item">
-                  <div class="blog-post-meta">
+                  <div class="blog-post-header">
                     <span class="blog-post-date">{{ post.date | date: "%-m/%-d/%y" }}</span>
-                    {% if post.tags %}
+                    <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="blog-post-title">
+                      {{ post.title }}
+                    </a>
+                  </div>
+                  {% if post.tags %}
+                    <div class="blog-post-tags">
                       {% for tag in post.tags %}
                         <span class="blog-tag blog-tag-{{ tag | slugify }}">{{ tag }}</span>
                       {% endfor %}
-                    {% endif %}
-                  </div>
-                  <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="blog-post-title">
-                    {{ post.title }}
-                  </a>
+                    </div>
+                  {% endif %}
                 </div>
 
               {% endif %}
